--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://v1acharya34:Anishma%4012@storelyrics.lzzey6q.mongodb.net/nx1Lyrics?retryWrites=true&w=majority
 JWT_SECRET=abcdefghijklmnopqrstuvwxyz
+HOST_URL=http://localhost:3000
