--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^10.16.4",
     "jose": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.4.4",
     "mongoose": "^8.0.0",
     "mongoose-slug-updater": "^3.3.0",
     "next": "14.0.1",
