--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
